crates/pg_syntax/tests/snapshots/postgres_regress/line@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{nan, 1, nan}'::line = '{nan, 1, nan}'::line as true,\n\t   '{nan, 1, nan}'::line = '{nan, 2, nan}'::line as false;"
---
SelectStmt@0..121
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..60
    AExpr@7..52
      TypeCast@7..28
        AConst@7..22
          Sconst@7..22 "'{nan, 1, nan}'"
        Typecast@22..24 "::"
        TypeName@24..28
          Ident@24..28 "line"
      Whitespace@28..29 " "
      Ascii61@29..30 "="
      Whitespace@30..31 " "
      TypeCast@31..52
        AConst@31..46
          Sconst@31..46 "'{nan, 1, nan}'"
        Typecast@46..48 "::"
        TypeName@48..52
          Ident@48..52 "line"
    Whitespace@52..53 " "
    As@53..55 "as"
    Whitespace@55..56 " "
    TrueP@56..60 "true"
  Ascii44@60..61 ","
  Newline@61..62 "\n"
  Newline@62..63 "\t"
  Whitespace@63..66 "   "
  ResTarget@66..120
    AExpr@66..111
      TypeCast@66..87
        AConst@66..81
          Sconst@66..81 "'{nan, 1, nan}'"
        Typecast@81..83 "::"
        TypeName@83..87
          Ident@83..87 "line"
      Whitespace@87..88 " "
      Ascii61@88..89 "="
      Whitespace@89..90 " "
      TypeCast@90..111
        AConst@90..105
          Sconst@90..105 "'{nan, 2, nan}'"
        Typecast@105..107 "::"
        TypeName@107..111
          Ident@107..111 "line"
    Whitespace@111..112 " "
    As@112..114 "as"
    Whitespace@114..115 " "
    FalseP@115..120 "false"
  Ascii59@120..121 ";"

