crates/pg_syntax/tests/snapshots/postgres_regress/line@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO LINE_TBL VALUES ('10,-10 ,-5,-4');"
---
InsertStmt@0..46
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "LINE_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..44
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..44
      AConst@29..44
        Sconst@29..44 "'10,-10 ,-5,-4'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

