crates/pg_syntax/tests/snapshots/postgres_regress/lseg@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO LSEG_TBL VALUES ('[(,2),(3,4)]');"
---
InsertStmt@0..45
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "LSEG_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..43
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..43
      AConst@29..43
        Sconst@29..43 "'[(,2),(3,4)]'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

